[CI-9439]: Fix initialise retry strategy (#53078)